# dave

./: .gitignore  .pre-commit-config.yaml  Changelog.md  README.md
.docker/: Dockerfile  README.md  jazzy.amd64.dockerfile  jazzy.arm64v8.dockerfile  jazzy.dockerfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  good-first-issue.md
.github/workflows/: docker-amd64.yml  docker-arm64v8.yml  docker.yml  jazzy-source-build.yml  lint.yml  pre-commit.yml
dave/: CMakeLists.txt  package.xml
dave_demos/: README.md
dave_demos/launch/: model_in_empty_world.launch.py  model_in_empty_world.py  mossy_cinder_block.launch.py  mossy_cinder_block.launch.yaml  nortek_dvl500_300_bare_model.launch.py  nortek_dvl500_300_bare_model.launch.yaml
dave_interfaces/: CMakeLists.txt  package.xml
dave_interfaces/msg/: DVL.msg  DVLBeam.msg  DVLTarget.msg  Location.msg  UsblCommand.msg  UsblResponse.msg
dave_interfaces/proto/pressure_sensor_msgs/msgs/: SensorPressure.proto
dave_interfaces/srv/: GetOriginSphericalCoord.srv  SetOriginSphericalCoord.srv  TransformFromSphericalCoord.srv  TransformToSphericalCoord.srv
dave_model_description/: CMakeLists.txt  package.xml
dave_model_description/description/nortek_dvl500_300/: model.sdf
dave_model_description/description/nortek_dvl500_300_bare_model/: model.sdf
dave_model_description/launch/: upload_model.launch.py
dave_model_description/launch/mossy_cinder_block/: upload_mossy_cinder_block.launch.py  upload_mossy_cinder_block.launch.yaml
dave_model_description/launch/nortek_dvl500_300_bare_model/: upload_nortek_dvl500_300_bare_model.launch.py  upload_nortek_dvl500_300_bare_model.launch.yaml
examples/dave_demos/: CMakeLists.txt  README.md  package.xml
examples/dave_demos/launch/: dave_object.launch.py  dave_sensor.launch.py  dave_world.launch.py  dave_world_bimanual_example.launch.py  dave_world_electrical_mating.launch.py  dave_world_graded_seabed.launch.py  dave_world_integrated.launch.py  dave_world_mud_occlusion_demo.launch.py  dave_world_new_bathy_example.launch.py  dave_world_ocean_models.launch.py  dave_world_ocean_waves.launch.py  dave_world_ocean_waves_dvl_current_profiling.launch.py  dave_world_ocean_waves_occluded_bottom.launch.py  dave_world_ocean_waves_transient_current.launch.py  dave_world_plug_and_socket_demo.launch.py  dave_world_santorini.launch.py  dave_world_valve_manipulation_demo.launch.py  model_in_empty_world.launch.py  object_in_empty_world.launch.py  sensor_in_empty_world.launch.py  sensor_in_world.launch.py
examples/dave_robot_launch/: CMakeLists.txt  README.md  package.xml
examples/dave_robot_launch/launch/: rexrov.launch.py  robot_in_world.launch.py
extras/: ardusub-mac-install.sh  ardusub-ubuntu-install-local.sh  ardusub-ubuntu-install.sh  mavros-ubuntu-install.sh  ros-jazzy-binary-gz-harmonic-source-install.sh  ros-jazzy-gz-harmonic-install.sh  ros-jazzy-gz-harmonic-setup.sh
extras/lint_local/: README.md  lint_local.sh
extras/repos/: dave.jazzy.repos  mavros.jazzy.repos
gazebo/dave_gz_model_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gz_model_plugins/include/dave_gz_model_plugins/: UsblTransceiver.hh  UsblTransponder.hh
gazebo/dave_gz_model_plugins/src/: UsblTransceiver.cc  UsblTransponder.cc
gazebo/dave_gz_sensor_plugins/: CMakeLists.txt  package.xml
gazebo/dave_gz_sensor_plugins/include/dave_gz_sensor_plugins/: UnderwaterCamera.hh  UsblTransceiver.hh  UsblTransponder.hh  sea_pressure_sensor.hh
gazebo/dave_gz_sensor_plugins/src/: UnderwaterCamera.cc  UsblTransceiver.cc  UsblTransponder.cc  sea_pressure_sensor.cc
gazebo/dave_model_systems/: CMakeLists.txt  package.xml
gazebo/dave_model_systems/include/dave_model_systems/: BasicSystem.hh  FullSystem.hh  UsblTransceiver.hh  UsblTransponder.hh
gazebo/dave_model_systems/src/: BasicSystem.cc  FullSystem.cc  UsblTransceiver.cc  UsblTransponder.cc
gazebo/dave_ros_gz_plugins/: CMakeLists.txt  package.xml
gazebo/dave_ros_gz_plugins/include/dave_ros_gz_plugins/: DVLBridge.hh  SphericalCoords.hh
gazebo/dave_ros_gz_plugins/src/: DVLBridge.cc  SphericalCoords.cc
models/dave_models/: CMakeLists.txt  package.xml
models/dave_models/launch/: upload_model.launch.py
models/dave_object_models/: CMakeLists.txt  package.xml
models/dave_object_models/description/mossy_cinder_block/: model.config  model.sdf
models/dave_object_models/launch/: upload_model.launch.py  upload_object.launch.py
models/dave_robot_models/: CMakeLists.txt  package.xml
models/dave_robot_models/config/bluerov2/: robot_config.py  ros_gz_bridge.py
models/dave_robot_models/config/bluerov2_heavy/: robot_config.py  ros_gz_bridge.py
models/dave_robot_models/config/glider_slocum/: robot_config.py
models/dave_robot_models/config/mavros/: mavros.yaml
models/dave_robot_models/config/rexrov/: robot_config.py
models/dave_robot_models/description/bluerov2/: model.config  model.sdf
models/dave_robot_models/description/bluerov2_heavy/: model.config  model.sdf
models/dave_robot_models/launch/: glider_slocum.launch.py  rexrov.launch.py  upload_robot.launch.py
models/dave_robot_models/worlds/: dave_ocean_waves.world
models/dave_sensor_models/: CMakeLists.txt  package.xml
models/dave_sensor_models/hooks/: dave_sensor_models.dsv.in
models/dave_sensor_models/launch/: upload_sensor.launch.py  upload_sensor_world.launch.py
models/dave_worlds/: CMakeLists.txt  package.xml
models/dave_worlds/hooks/: dave_worlds.dsv.in
models/dave_worlds/worlds/: camera_tutorial.world  dave_Santorini.world  dave_bimanual_example.world  dave_electrical_mating.world  dave_graded_seabed.world  dave_integrated.world  dave_mud_occlusion_demo.world  dave_new_bathy_example.world  dave_ocean_models.world  dave_ocean_waves.world  dave_ocean_waves_dvl_current_profiling.world  dave_ocean_waves_mossy_ground.world  dave_ocean_waves_occluded_bottom.world  dave_ocean_waves_transient_current.world  dave_plug_and_socket.world  dave_plug_and_socket_demo.world  dvl_world.world  new_dvl.world  usbl_tutorial.world  valve_manipulation_demo.world
(+21 files in other folders)
