cmake_minimum_required(VERSION 3.8)
project(dave_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(gz-cmake3 REQUIRED)
find_package(gz-msgs10 REQUIRED) # new to proto

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/UsblCommand.msg"
  "msg/UsblResponse.msg"
  "msg/Location.msg"
  "srv/SetOriginSphericalCoord.srv"
  "srv/GetOriginSphericalCoord.srv"
  "srv/TransformToSphericalCoord.srv"
  "srv/TransformFromSphericalCoord.srv"
  DEPENDENCIES geometry_msgs
)

# Install message package.xml
install(FILES
  package.xml
  DESTINATION share/${PROJECT_NAME}
)

# new to proto
################################################

# Define a variable 'GZ_MSGS_VER' holding the version number
set(GZ_MSGS_VER ${gz-msgs10_VERSION_MAJOR})

# Define a variable 'MSGS_PROTOS' listing the .proto files
set(MSGS_PROTOS ${CMAKE_CURRENT_SOURCE_DIR}/proto/pressure_sensor_msgs/msgs/SensorPressure.proto)

# Define the GZ_DATA_INSTALL_DIR variable
# DESTINATION ${GZ_DATA_INSTALL_DIR}/protos
install(
  DIRECTORY gz
  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/proto/pressure_sensor_msgs/msgs/SensorPressure.proto
  COMPONENT proto
  FILES_MATCHING PATTERN "*.proto")

# Example of custom messages that depend on gz.msgs
set(MSGS_PROTOS
  ${CMAKE_CURRENT_SOURCE_DIR}/proto/pressure_sensor_msgs/msgs/SensorPressure.proto)
gz_msgs_generate_messages(
  # The cmake target to be generated for libraries/executables to link
  TARGET msgs    # pressure_sensor_msgs_gen
  # The protobuf package to generate (Typically based on the path)
  PROTO_PACKAGE "pressure_sensor_msgs.msgs"
  # The path to the base directory of the proto files
  # All import paths should be relative to this (eg gz/custom_msgs/vector3d.proto)
  MSGS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/proto
  # List of proto files to generate
  MSGS_PROTOS ${MSGS_PROTOS}
  # List of message targets this library imports from
  # DEPENDENCIES gz_msgs_gen
  # Dependency on gz-msgs
  DEPENDENCIES gz-msgs${GZ_MSGS_VER}::gz-msgs${GZ_MSGS_VER}
)
# target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_NAME}-msgs)

################################################
ament_export_dependencies(rosidl_default_runtime)
# Install CMake package configuration
ament_export_include_directories(include)

ament_package()
